2009-07-01  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* www/formats.rst: ART module has writer for more than year.
	So mark this here.

2009-06-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac, magick/blob.c: Add experimental Solaris direct I/O
	support which is enabled by setting the environment variable
	MAGICK_DIRECTIO to TRUE.  Direct I/O bypasses the filesystem
	cache.  Only works for NFS and UFS, and not for ZFS.

2009-06-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* rungm.sh.in: Fix environment variable issues noticed while
	running the test suite under MinGW.

	* Makefile.am (TESTS_ENVIRONMENT): Fix environment variable issues
	noticed while running the test suite under MinGW.

	* magick/hclut.c (HaldClutImage): Don't convert Cineon Log to RGB.

2009-06-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImageCommand): Cache mogrify argument
	images so that they are only loaded once when mogrify is used to
	process multiple image files.

	* coders/dpx.c (WriteDPXImage): Fix leak of chroma image when
	subsampling to 4:2:2.

2009-06-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (ExpandFilenames): Expand @filename to a list
	of arguments.

2009-06-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImageCommand): Fix memory leak of
	output_directory string buffer, if it was used.

	* magick/utility.c (ExpandFilenames): Input wildcard file
	specifications with a subdirectory component such as
	"subdir/*.dpx" were not working.

2009-06-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (InitializeMagick): Invoke InitializeMagickRegistry().

	* magick/registry.c (RegistryInfo): There is no reason to expose
	the RegistryInfo structure in the public interface so it is moved
	to registry.c.
	(InitializeMagickRegistry): Add a function for initializing the
	magick registry.

2009-06-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
