@@ -1098,12 +1098,13 @@ AC_SUBST(UINTPTR_F)
 #
 ########
 GM_FUNC_MMAP_FILEIO
-AC_CHECK_FUNCS([atoll ctime_r directio _exit ftime getexecname getc_unlocked \
-  getpagesize getpid lltostr localtime_r madvise mkstemp _NSGetExecutablePath \
-  _pclose pclose poll _popen popen posix_fallocate pread pwrite putc_unlocked \
-  raise rand_r readdir_r readlink realpath select seekdir sigemptyset \
-  sigaction strerror strerror_r strlcat strlcpy strtoll sysconf tempnam \
-  tmpnam_r times telldir ulltostr vsprintf vsnprintf])
+AC_CHECK_FUNCS([atoll ctime_r directio _exit fcntl ftime getexecname \
+  getc_unlocked getpagesize getpid lltostr localtime_r madvise mkstemp \
+  _NSGetExecutablePath _pclose pclose poll _popen popen posix_fallocate \
+  pread pwrite putc_unlocked raise rand_r readdir_r readlink realpath \
+  select seekdir sigemptyset sigaction strerror strerror_r strlcat \
+  strlcpy strtoll sysconf tempnam tmpnam_r times telldir ulltostr vsprintf \
+  vsnprintf])
 
 ########
 #
