@@ -141,6 +141,9 @@
 /* define if the compiler supports the explicit keyword */
 #undef HAVE_EXPLICIT
 
+/* Define to 1 if you have the `fcntl' function. */
+#undef HAVE_FCNTL
+
 /* Define to 1 if fseeko (and presumably ftello) exists and is declared. */
 #undef HAVE_FSEEKO
 
