@@ -21,6 +21,24 @@
 </tr>
 </table>
 <p>
+2009-07-01  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/blob.c (OpenBlob): Subsequent research shows that Direct
+        I/O will not be useful to ordinary file I/O due to specific
+        requirements for buffer alignments and I/O sizes.  Support for
+        requesting it is removed.
+
+</UL>
+<p>
+2009-07-01  Fojtik Jaroslav  &lt;JaFojtik@seznam.cz&gt;
+
+<UL>
+  <LI> www/formats.rst: ART module has writer for more than year.
+        So mark this here.
+
+</UL>
+<p>
 2009-06-29  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
