@@ -73,7 +73,7 @@ image formats.</p>
 <td>Notes</td>
 </tr>
 <tr><td>ART</td>
-<td>R</td>
+<td>RW</td>
 <td>PFS: 1st Publisher</td>
 <td>Format originally used on the Macintosh
 (MacPaint?) and later used for PFS: 1st
@@ -1284,7 +1284,7 @@ automatically uncompressed while the image is read.</p>
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2009-06-16 13:53 UTC.
+Generated on: 2009-07-01 21:26 UTC.
 
 </div>
 </body>
