@@ -1,3 +1,10 @@
+2009-07-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/blob.c (OpenBlob): Subsequent research shows that Direct
+	I/O will not be useful to ordinary file I/O due to specific
+	requirements for buffer alignments and I/O sizes.  Support for
+	requesting it is removed.
+
 2009-07-01  Fojtik Jaroslav  <JaFojtik@seznam.cz>
 
 	* www/formats.rst: ART module has writer for more than year.
